<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplay</string>
    <string name="title_activity_settings">SettingsActivity</string>
	<string name="settings_header">Advanced search options</string>
	<string name="size_select_label">Image Size</string>
	<string name="color_filter_label">Color Filter</string>
	<string name="image_type_label">Image Type</string>
	<string name="site_filter_label">Site Filter</string>
	<string name="save_button_label">Save</string>
	<string-array name="size_options">
	    <item></item>
	    <item>Small</item>
	    <item>Medium</item>
	    <item>Large</item>
	    <item>Extra Large</item>
	</string-array>
	<string-array name="color_options">
	    <item></item>
	    <item>Black</item>
	    <item>Blue</item>
	    <item>Brown</item>
	    <item>Gray</item>
	    <item>Green</item>
	    <item>Orange</item>
	    <item>Pink</item>
	    <item>Purple</item>
	    <item>Red</item>
	    <item>Teal</item>
	    <item>White</item>
	    <item>Yellow</item>
	</string-array>
	<string-array name="type_options">
	    <item></item>
	    <item>Faces</item>
	    <item>Photo</item>
	    <item>Clipart</item>
	    <item>Lineart</item>
	</string-array>
</resources>
